[feat]:add more example

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,22 @@
   <title>abbr tag</title>
   <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
   <section>
     <h1>文字中含有縮寫時</h1>
-    <p>The
+    <p>網頁超文字應用技術工作小組
       <abbr title="Web Hypertext Application Technology Working Group">WHATWG</abbr>
-      started working on HTML5 in 2004.</p>
-  </section>
+      是一個以推動網路HTML標準為目的而成立的組織。
+    </p>
+  </section> 
+  <section>
+    <h1>樣式調整</h1>
+    <p>網頁超文字應用技術工作小組
+      <abbr>whatwg</abbr>
+      是一個以推動網路HTML標準為目的而成立的組織。
+    </p>
+  </section> 
   <section>
     <h1>樣式調整</h1>
     <form>
